--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" type="image/png" href="favicon.png" />
   </head>
   <body>
     <h1>One Game a Month</h1>
