--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="the official one game a month exhibition by bitbrain" />
+    <meta name="keywords" content="1gam,gamedev,bitbrain,pixelart,gamejam,exhibition,collection,games" />
+    <meta property="og:title" content="One Game a Month by bitbrain" />
+    <meta property="og:image" content="logo.png" />
+    <meta property="og:description" content="the official one game a month exhibition by bitbrain" />
+    <meta property="twitter:title" content="One Game a Month by bitbrain" />
+
     <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/png" href="favicon.png" />
